syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/AndreiMartynenko/auth/grpc/pkg/auth_v1;auth_v1";

service UserAPIServices {
    rpc Create (CreateUserRequest) returns (CreateUserResponse);
    rpc Get(GetUserRequest) returns (GetUserResponse);
    rpc Update(UpdateUserRequest) returns (UpdateUserResponse);
    rpc Delete(DeleteUserRequest) returns (DeleteUserResponse);
}

// User Role
enum UserRole {
    USER = 0;
    ADMIN = 1;
}

// Create User Request
message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirmed = 4;
    UserRole role = 5;
}

// Create User Response
message CreateUserResponse {
    int64 id = 1;
}

// Get User Request
message GetUserRequest {
    int64 id = 1;
}

// Get User Response
message GetUserResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    UserRole role = 4; 
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// Update User Request
message UpdateUserRequest {
    int64 id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
    UserRole role = 4; 
}

// Update User Response
message UpdateUserResponse {
  google.protobuf.Empty delete_response = 1;
}

// Delete User Request
message DeleteUserRequest {
    int64 id = 1;
}

//Delete User Response
message DeleteUserResponse {
  google.protobuf.Empty delete_response = 1;
}